deploy/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fedfina-s
  labels:
    name: fedfina-staging
    environment: staging
    purpose: timezone-testing
